--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,15 @@ members = [
 ]
 
 resolver = "2"
+
+[workspace.dependencies]
+tokio = "1.34.0"
+async-trait = "0.1.74"
+hickory-server = "0.24.0"
+
+clap = "4.4.10"
+serde = "1.0.193"
+serde_with = "1.6.1"
+serde_json = "1.0.108"
+tracing = "0.1"
+tracing-subscriber = "0.3"
