--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,10 @@ serde_with = "1.6.1"
 serde_json = "1.0.108"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+
+hpke-rs = "0.2.0"
+hpke-rs-crypto = "0.2.0"
+hpke-rs-rust-crypto = "0.2.0"
+
+pkcs8 = "0.10.2"
+num_enum = "0.7.1"
