--- a/echoxy-proxy/Cargo.toml
+++ b/echoxy-proxy/Cargo.toml
@@ -6,3 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hpke-rs = { workspace = true }
+hpke-rs-crypto = { workspace = true }
+hpke-rs-rust-crypto = { workspace = true }
+
+pkcs8 = { workspace = true }
+num_enum = { workspace = true }
+
+tokio = { workspace = true, features = ["full"] }
+clap = { workspace = true, features = ["derive"] }
+serde = { workspace = true }
+serde_with = { workspace = true, features = ["base64"] }
+serde_json = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
